replace blue image with pencil image

--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background Image</title>
 
     <style>
         body {
-            background-image: url('blue.png');
-            color: white;
+            /* background-image: url('pencil.png'); */
+            color: #545454;
+            font-family: 'Open Sans', sans-serif;
+            font-size: large;
+        }
+
+        #center {
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
 <body>
-    <div>
-        Change the background Image
+    <div id="center">
+        Change the Background Image
     </div>
 </body>
 </html>
