--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <style>
         body {
-            /* background-image: url('pencil.png'); */
             color: #545454;
             font-family: 'Open Sans', sans-serif;
             font-size: large;
+            /* background-image: url("pencil.png"); */
         }
 
         #center {
@@ -20,7 +20,7 @@
         }
     </style>
 </head>
-<body>
+<body style='background-image: url("pencil.png");'>
     <div id="center">
         Change the Background Image
     </div>
